bizinikiwi/pezframe/support/test/tests/pezpallet_ui/storage_incomplete_item.stderr
error: free type alias without body
  --> tests/pezpallet_ui/storage_incomplete_item.rs:36:2
   |
36 |     type Foo;
   |     ^^^^^^^^-
   |             |
   |             help: provide a definition for the type: `= <type>;`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `pezpallet`
  --> tests/pezpallet_ui/storage_incomplete_item.rs:35:4
   |
35 |     #[pezpallet::storage]
   |       ^^^^^^^^^ use of unresolved module or unlinked crate `pezpallet`
